--- a/customStyle.css
+++ b/customStyle.css
@@ -286,16 +286,24 @@ a{
 .footer{
 	padding: 20px;
 }
+i{
+	display: inline-block;
+	padding-right: 50px;
+	margin-left: 30px;
+}
+.navbar-dark .navbar-toggler-icon{
+ background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28241, 135, 85, 0.8%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
 /*adding responsiveness*/
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .kid1box,.kid2box,.kid3box {
     display: none;
   }
   svg{
   	display: none;
   }
-	.bg-white{
-	margin-left:0px;
-	}
+  .bg-white{
+  	margin-left: 0px;
+  }
 }
